# stown

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  prep.sh  prepdev.sh  publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.gitea/workflows/: on-push-gt.yml
.github/workflows/: dev-build.yml  on-push-gh.yml  package.yml  publish-commit.yml  publish-release.yml  publish-v1.yml  publish-v2.yml  publish.yml  push-build.yml  python-package.yml
docs/: .gitignore  Makefile  after.txt  before.txt  combined.conf  example.conf  index.html  internal.conf  stown.adoc  usage.txt
scripts/: devprep.sh  publish.sh
src/stown/: __init__.py  __main__.py  core.py  log.py  stown.py
tests/: expected.json  stown_test.py  test_stown.py
tests/data/: dot-sugar
tests/data/healthy/: dot-banana  fruit.git  pear
